...
        android:checked="true"
        android:icon="@drawable/discover_selector"
        android:title=""
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_contact"
        android:checked="true"
        android:icon="@drawable/contact_selector"
        android:title=""
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_message_feed"
        android:icon="@drawable/message_selector"
        android:title=""
        android:visible="false"
        app:showAsAction="ifRoom" />
    <!--<item
        android:id="@+id/action_survey"
        android:icon="@drawable/survey_selector"
        android:title=""
        app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/setting_selector"
        android:title=""
        app:showAsAction="ifRoom" />

</menu>
