...
    <android.support.constraint.ConstraintLayout
        android:id="@+id/my_wallet_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/main_toolbar"
            layout="@layout/app_toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
...
                />


        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/button_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.655"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/button_buy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/buy_data"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="@dimen/margin_20"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="@dimen/margin_20"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/button_sell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sell_data"
                android:textAllCaps="false"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
...
